--- a/Untitled3.ipynb
+++ b/Untitled3.ipynb
@@ -30,7 +30,11 @@
       "metadata": {
         "id": "nx1e2u1AO0Vj",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "aa2417c7-00bd-432a-c949-956a93ba5568"
       },
       "source": [
         "num = int(input(\"number = \"))\n",
@@ -39,8 +43,16 @@
         "else :\n",
         "  print(\"it's not divisible\")  "
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "it's not divisible\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
